@@ -1310,8 +1310,11 @@ enum wxKeyCategoryFlags
         keyboard events are generated giving the parent window the opportunity
         to intercept all the keyboard entry. If the event is handled, i.e. the
         handler doesn't call wxEvent::Skip(), no further keyboard events are
-        generated. Notice that this event is currently not generated by
-        wxOSX/Cocoa port.
+        generated. Notice that this event is not generated when the mouse is
+        captured as it is considered that the window which has the capture
+        should receive all the keyboard events too without allowing its parent
+        wxTopLevelWindow to interfere with their processing. Also please note
+        that currently this event is not generated by wxOSX/Cocoa port.
     @endEventTable
 
     @see wxKeyboardState
